[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "constellation_client"
version = "0.0.8"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]